--- a/shippable.yml
+++ b/shippable.yml
@@ -8,6 +8,8 @@ resources:
 jobs:
   - name: baseami_prep
     type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
     steps:
       - IN: bldami_repo
         switch: off
@@ -34,6 +36,9 @@ jobs:
       - IN: u14phpall_img
       - IN: u14cppall_img
       - IN: node_repo
+      - IN: reqProc_img
+      - IN: reqKick_repo
+      - IN: cexec_repo
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "bldami_repo")
@@ -42,3 +47,28 @@ jobs:
             - popd
     on_failure:
       - script: cat IN/bldami_repo/gitRepo/base/output.txt #TODO change to standard syntax
+
+  - name: baseami_patch
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: bldami_repo
+        switch: off
+      - IN: ami_bits_access_cli
+        switch: off
+      - IN: baseami_params
+        switch: off
+      - IN: cexec_repo
+      - IN: node_repo
+      - IN: reqProc_img
+      - IN: reqKick_repo
+      - IN: baseami_prep
+      - TASK:
+          script:
+            - pushd $(shipctl get_resource_state "bldami_repo")
+            - cd basePatch
+            - ./basePatchPack.sh baseami_patch ami_bits_access_cli baseami_prep
+            - popd
+    on_failure:
+      - script: cat IN/bldami_repo/gitRepo/basePatch/output.txt #TODO change to standard syntax
