--- a/shippable.yml
+++ b/shippable.yml
@@ -36,7 +36,7 @@ jobs:
       - IN: u14phpall_img
       - IN: u14cppall_img
       - IN: node_repo
-      - IN: reqProc_img
+      - IN: build_reqProc_x86_64_Ubuntu_16_04
       - IN: reqKick_repo
       - IN: cexec_repo
       - TASK:
@@ -61,7 +61,7 @@ jobs:
         switch: off
       - IN: cexec_repo
       - IN: node_repo
-      - IN: reqProc_img
+      - IN: build_reqProc_x86_64_Ubuntu_16_04
       - IN: reqKick_repo
       - IN: baseami_prep
       - TASK:
