--- a/shippable.yml
+++ b/shippable.yml
@@ -5,6 +5,14 @@ resources:
     pointer:
       region: us-east-1
 
+  - name: ami_bits_access
+    type: integration
+    integration: aws_bits_access
+
+  - name: ami_prod_access
+    type: integration
+    integration: aws_prod_access
+
 jobs:
   - name: baseami_prep
     type: runSh
@@ -72,3 +80,23 @@ jobs:
             - popd
     on_failure:
       - script: cat IN/bldami_repo/gitRepo/basePatch/output.txt #TODO change to standard syntax
+
+  - name: baseadmiralami_prep
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: bldami_repo
+        switch: off
+      - IN: ami_bits_access
+      - IN: ami_prod_access
+      - IN: admiralami_params
+      - TASK:
+          script:
+            - pushd $(shipctl get_resource_state "bldami_repo")
+            - cd admiral
+            - ./admiralPack.sh baseadmiralami_prep ami_bits_access ami_prod_access
+            - popd
+    on_failure:
+      - script: echo 'failed'
+      - NOTIFY: slack_rc
