updating version final

--- a/shippable.yml
+++ b/shippable.yml
@@ -13,6 +13,17 @@ resources:
     type: integration
     integration: aws_prod_access
 
+  - name: baseami_params
+    type: params
+    version:
+      params:
+        SOURCE_AMI: "ami-772aa961"
+        VPC_ID: "vpc-266f3241"
+        SUBNET_ID: "subnet-6df12f24"
+        SECURITY_GROUP_ID: "sg-f634518c"
+        REGION: "us-east-1"
+        SHIPPABLE_NODE_INIT_SCRIPT: "x86_64__Ubuntu__14.04__Docker__17.06.sh"
+
 jobs:
   - name: baseami_prep
     type: runSh
@@ -23,8 +34,8 @@ jobs:
         switch: off
       - IN: ami_bits_access_cli
         switch: off
-      - IN: baseami_params
-        switch: off
+#      - IN: baseami_params
+#        switch: off
       - IN: u16cppall_img
       - IN: u16phpall_img
       - IN: u16ruball_img
@@ -65,8 +76,8 @@ jobs:
         switch: off
       - IN: ami_bits_access_cli
         switch: off
-      - IN: baseami_params
-        switch: off
+#      - IN: baseami_params
+#        switch: off
       - IN: cexec_repo
       - IN: node_repo
       - IN: build_reqProc_x86_64_Ubuntu_16_04
@@ -92,8 +103,8 @@ jobs:
         switch: off
       - IN: rel_prod
         switch: off
-      - IN: baseami_params
-        switch: off
+#      - IN: baseami_params
+#        switch: off
       - IN: ami_bits_access
         switch: off
       - IN: dry_dh_x86_64_Ubuntu_tag_push
@@ -171,8 +182,8 @@ jobs:
         switch: off
       - IN: rel_prod
         switch: off
-      - IN: baseami_params
-        switch: off
+#      - IN: baseami_params
+#        switch: off
       - IN: ami_bits_access
         switch: off
       - IN: tag_push_img_genexec
@@ -195,8 +206,8 @@ jobs:
         switch: off
       - IN: rel_prod
         switch: off
-      - IN: baseami_params
-        switch: off
+#      - IN: baseami_params
+#        switch: off
       - IN: ami_bits_access
         switch: off
       - IN: tag_push_img_genexec
@@ -219,8 +230,8 @@ jobs:
         switch: off
       - IN: rel_prod
         switch: off
-      - IN: baseami_params
-        switch: off
+#      - IN: baseami_params
+#        switch: off
       - IN: ami_bits_access
         switch: off
       - IN: tag_push_img_genexec
@@ -243,8 +254,8 @@ jobs:
         switch: off
       - IN: rel_prod
         switch: off
-      - IN: baseami_params
-        switch: off
+#      - IN: baseami_params
+#        switch: off
       - IN: ami_bits_access
         switch: off
       - IN: tag_push_img_genexec
@@ -267,8 +278,8 @@ jobs:
         switch: off
       - IN: rel_prod
         switch: off
-      - IN: baseami_params
-        switch: off
+#      - IN: baseami_params
+#        switch: off
       - IN: ami_bits_access
         switch: off
       - IN: tag_push_img_genexec
@@ -291,8 +302,8 @@ jobs:
         switch: off
       - IN: rel_prod
         switch: off
-      - IN: baseami_params
-        switch: off
+#      - IN: baseami_params
+#        switch: off
       - IN: ami_bits_access
         switch: off
       - IN: tag_push_img_genexec
@@ -315,8 +326,8 @@ jobs:
         switch: off
       - IN: rel_prod
         switch: off
-      - IN: baseami_params
-        switch: off
+#      - IN: baseami_params
+#        switch: off
       - IN: ami_bits_access
         switch: off
       - IN: tag_push_img_genexec
@@ -339,8 +350,8 @@ jobs:
         switch: off
       - IN: rel_prod
         switch: off
-      - IN: baseami_params
-        switch: off
+#      - IN: baseami_params
+#        switch: off
       - IN: ami_bits_access
         switch: off
       - IN: tag_push_img_genexec
@@ -363,8 +374,8 @@ jobs:
         switch: off
       - IN: rel_prod
         switch: off
-      - IN: baseami_params
-        switch: off
+#      - IN: baseami_params
+#        switch: off
       - IN: ami_bits_access
         switch: off
       - IN: tag_push_img_genexec
