--- a/shippable.yml
+++ b/shippable.yml
@@ -1,4 +1,11 @@
 resources:
+  - name: prepami_repo
+    type: gitRepo
+    integration: ric03uec-github
+    pointer:
+      sourceName: shippable/buildami
+      branch: master
+
   - name: ami_bits_access_cli
     type: cliConfig
     integration: aws_bits_access
@@ -30,7 +37,7 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: bldami_repo
+      - IN: prepami_repo
         switch: off
       - IN: ami_bits_access_cli
         switch: off
@@ -60,19 +67,19 @@ jobs:
       - IN: cexec_repo
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "bldami_repo")
+            - pushd $(shipctl get_resource_state "prepami_repo")
             - cd base
             - ./basePack.sh baseami_prep ami_bits_access_cli
             - popd
     on_failure:
-      - script: cat IN/bldami_repo/gitRepo/base/output.txt #TODO change to standard syntax
+      - script: cat IN/prepami_repo/gitRepo/base/output.txt #TODO change to standard syntax
 
   - name: baseami_patch
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: bldami_repo
+      - IN: prepami_repo
         switch: off
       - IN: ami_bits_access_cli
         switch: off
@@ -85,19 +92,19 @@ jobs:
       - IN: baseami_prep
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "bldami_repo")
+            - pushd $(shipctl get_resource_state "prepami_repo")
             - cd basePatch
             - ./basePatchPack.sh baseami_patch ami_bits_access_cli baseami_prep
             - popd
     on_failure:
-      - script: cat IN/bldami_repo/gitRepo/basePatch/output.txt #TODO change to standard syntax
+      - script: cat IN/prepami_repo/gitRepo/basePatch/output.txt #TODO change to standard syntax
 
   - name: finalami_prep
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: bldami_repo
+      - IN: prepami_repo
         switch: off
       - IN: baseami_patch
         switch: off
@@ -112,19 +119,19 @@ jobs:
       - IN: gh_ship_repos_tag_push
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "bldami_repo")
+            - pushd $(shipctl get_resource_state "prepami_repo")
             - cd exec
             - ./execPack.sh finalami_prep rel_prod baseami_patch ami_bits_access
             - popd
     on_failure:
-      - script: cat /build/IN/bldami_repo/gitRepo/exec/output.txt
+      - script: cat /build/IN/prepami_repo/gitRepo/exec/output.txt
 
   - name: baseadmiralami_prep
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: bldami_repo
+      - IN: prepami_repo
         switch: off
       - IN: ami_bits_access
         switch: off
@@ -134,7 +141,7 @@ jobs:
         switch: off
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "bldami_repo")
+            - pushd $(shipctl get_resource_state "prepami_repo")
             - cd admiral
             - ./admiralPack.sh baseadmiralami_prep ami_bits_access ami_prod_access
             - popd
@@ -147,7 +154,7 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: bldami_repo
+      - IN: prepami_repo
         switch: off
       - IN: baseadmiralami_prep
         switch: off
@@ -164,21 +171,21 @@ jobs:
       - IN: ship_ecr_x86_64_Ubuntu_tag_push
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "bldami_repo")
+            - pushd $(shipctl get_resource_state "prepami_repo")
             - cd admiralPatch
             - ./admiralPatchPack.sh finaladmiralami_prep baseadmiralami_prep rel_prod ami_bits_access ami_prod_access
             - popd
     on_success:
       - script: echo 'SUCCESS'
     on_failure:
-      - script: cat /build/IN/bldami_repo/gitRepo/admiralPatch/output.txt
+      - script: cat /build/IN/prepami_repo/gitRepo/admiralPatch/output.txt
 
   - name: v532_update
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: bldami_repo
+      - IN: prepami_repo
         switch: off
       - IN: rel_prod
         switch: off
@@ -190,19 +197,19 @@ jobs:
       - IN: gh_ship_repos_tag_push
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "bldami_repo")
+            - pushd $(shipctl get_resource_state "prepami_repo")
             - cd exec
             - ./execPackTmp.sh v532_update rel_prod ami-3b972d2d v532 Ubuntu_14.04_Docker_1.13.sh true ami_bits_access
             - popd
     on_failure:
-      - script: cat /build/IN/bldami_repo/gitRepo/exec/output.txt
+      - script: cat /build/IN/prepami_repo/gitRepo/exec/output.txt
 
   - name: v541_update
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: bldami_repo
+      - IN: prepami_repo
         switch: off
       - IN: rel_prod
         switch: off
@@ -214,19 +221,19 @@ jobs:
       - IN: gh_ship_repos_tag_push
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "bldami_repo")
+            - pushd $(shipctl get_resource_state "prepami_repo")
             - cd exec
             - ./execPackTmp.sh v541_update rel_prod ami-90813b86 v541 Ubuntu_14.04_Docker_1.13.sh true ami_bits_access
             - popd
     on_failure:
-      - script: cat /build/IN/bldami_repo/gitRepo/exec/output.txt
+      - script: cat /build/IN/prepami_repo/gitRepo/exec/output.txt
 
   - name: v551_update
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: bldami_repo
+      - IN: prepami_repo
         switch: off
       - IN: rel_prod
         switch: off
@@ -238,19 +245,19 @@ jobs:
       - IN: gh_ship_repos_tag_push
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "bldami_repo")
+            - pushd $(shipctl get_resource_state "prepami_repo")
             - cd exec
             - ./execPackTmp.sh v551_update rel_prod ami-4b36535d v551 Ubuntu_14.04_Docker_1.13.sh true ami_bits_access
             - popd
     on_failure:
-      - script: cat /build/IN/bldami_repo/gitRepo/exec/output.txt
+      - script: cat /build/IN/prepami_repo/gitRepo/exec/output.txt
 
   - name: v561_update
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: bldami_repo
+      - IN: prepami_repo
         switch: off
       - IN: rel_prod
         switch: off
@@ -262,19 +269,19 @@ jobs:
       - IN: gh_ship_repos_tag_push
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "bldami_repo")
+            - pushd $(shipctl get_resource_state "prepami_repo")
             - cd exec
             - ./execPackTmp.sh v561_update rel_prod ami-c0a5f5d6 v561 Ubuntu_14.04_Docker_1.13.sh true ami_bits_access
             - popd
     on_failure:
-      - script: cat /build/IN/bldami_repo/gitRepo/exec/output.txt
+      - script: cat /build/IN/prepami_repo/gitRepo/exec/output.txt
 
   - name: v573_update
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: bldami_repo
+      - IN: prepami_repo
         switch: off
       - IN: rel_prod
         switch: off
@@ -286,19 +293,19 @@ jobs:
       - IN: gh_ship_repos_tag_push
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "bldami_repo")
+            - pushd $(shipctl get_resource_state "prepami_repo")
             - cd exec
             - ./execPackTmp.sh v573_update rel_prod ami-b9cfdeaf v573 Ubuntu_14.04_Docker_1.13.sh true ami_bits_access
             - popd
     on_failure:
-      - script: cat /build/IN/bldami_repo/gitRepo/exec/output.txt
+      - script: cat /build/IN/prepami_repo/gitRepo/exec/output.txt
 
   - name: v582_update
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: bldami_repo
+      - IN: prepami_repo
         switch: off
       - IN: rel_prod
         switch: off
@@ -310,19 +317,19 @@ jobs:
       - IN: gh_ship_repos_tag_push
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "bldami_repo")
+            - pushd $(shipctl get_resource_state "prepami_repo")
             - cd exec
             - ./execPackTmp.sh v582_update rel_prod ami-f9d6e782 v582 Ubuntu_14.04_Docker_17.06.sh true ami_bits_access
             - popd
     on_failure:
-      - script: cat /build/IN/bldami_repo/gitRepo/exec/output.txt
+      - script: cat /build/IN/prepami_repo/gitRepo/exec/output.txt
 
   - name: v5104_update
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: bldami_repo
+      - IN: prepami_repo
         switch: off
       - IN: rel_prod
         switch: off
@@ -334,19 +341,19 @@ jobs:
       - IN: gh_ship_repos_tag_push
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "bldami_repo")
+            - pushd $(shipctl get_resource_state "prepami_repo")
             - cd exec
             - ./execPackTmp.sh v5104_update rel_prod ami-312b8d4b v5104 Ubuntu_14.04_Docker_17.06.sh true ami_bits_access
             - popd
     on_failure:
-      - script: cat /build/IN/bldami_repo/gitRepo/exec/output.txt
+      - script: cat /build/IN/prepami_repo/gitRepo/exec/output.txt
 
   - name: stable_update
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: bldami_repo
+      - IN: prepami_repo
         switch: off
       - IN: rel_prod
         switch: off
@@ -358,19 +365,19 @@ jobs:
       - IN: gh_ship_repos_tag_push
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "bldami_repo")
+            - pushd $(shipctl get_resource_state "prepami_repo")
             - cd exec
             - ./execPackTmp.sh stable_update rel_prod ami-4ae41a5c stable Ubuntu_14.04_Docker_1.9.sh false ami_bits_access
             - popd
     on_failure:
-      - script: cat /build/IN/bldami_repo/gitRepo/exec/output.txt
+      - script: cat /build/IN/prepami_repo/gitRepo/exec/output.txt
 
   - name: unstable_update
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: bldami_repo
+      - IN: prepami_repo
         switch: off
       - IN: rel_prod
         switch: off
@@ -382,9 +389,9 @@ jobs:
       - IN: gh_ship_repos_tag_push
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "bldami_repo")
+            - pushd $(shipctl get_resource_state "prepami_repo")
             - cd exec
             - ./execPackTmp.sh unstable_update rel_prod ami-90fd0286 unstable Ubuntu_14.04_Docker_1.11.sh false ami_bits_access
             - popd
     on_failure:
-      - script: cat /build/IN/bldami_repo/gitRepo/exec/output.txt
+      - script: cat /build/IN/prepami_repo/gitRepo/exec/output.txt
