adding test job

--- a/shippable.yml
+++ b/shippable.yml
@@ -417,3 +417,4 @@ jobs:
           script:
             - echo $(shipctl get_resource_version_key "prepami_repo" "COMMIT")
             - echo $(shipctl get_resource_version_key "prepami_repo" "commit")
+            - echo $PREPAMI_REPO_COMMIT
