--- a/shippable.yml
+++ b/shippable.yml
@@ -85,7 +85,7 @@ jobs:
       - IN: u14ruball_img
       - IN: u14phpall_img
       - IN: u14cppall_img
-      - IN: node_repo
+#      - IN: node_repo
       - IN: reqProc_x86_64_Ubuntu_16_04_prep
       - IN: reqKick_repo
 #      - IN: cexec_repo
@@ -110,7 +110,7 @@ jobs:
       - IN: baseami_params
         switch: off
 #      - IN: cexec_repo
-      - IN: node_repo
+#      - IN: node_repo
       - IN: reqProc_x86_64_Ubuntu_16_04_prep
       - IN: reqKick_repo
       - IN: baseami_prep
