--- a/shippable.yml
+++ b/shippable.yml
@@ -48,12 +48,19 @@ resources:
         SECURITY_GROUP_ID: "sg-9df159f8"
         REGION: "us-east-1"
 
-#  - name: cexec_repo
-#    type: gitRepo
-#    integration: avinci_gh
-#    pointer:
-#      sourceName: shippable/cexec
-#      branch: master
+  - name: cexec_repo
+    type: gitRepo
+    integration: avinci_gh
+    pointer:
+      sourceName: shippable/cexec
+      branch: master
+
+  - name: node_repo
+    type: gitRepo
+    integration: avinci_gh
+    pointer:
+      sourceName: shippable/node
+      branch: master
 
 jobs:
   - name: baseami_prep
@@ -85,10 +92,10 @@ jobs:
       - IN: u14ruball_img
       - IN: u14phpall_img
       - IN: u14cppall_img
-#      - IN: node_repo
+      - IN: node_repo
+      - IN: cexec_repo
       - IN: reqProc_x86_64_Ubuntu_16_04_prep
       - IN: reqKick_repo
-#      - IN: cexec_repo
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -109,8 +116,8 @@ jobs:
         switch: off
       - IN: baseami_params
         switch: off
-#      - IN: cexec_repo
-#      - IN: node_repo
+      - IN: cexec_repo
+      - IN: node_repo
       - IN: reqProc_x86_64_Ubuntu_16_04_prep
       - IN: reqKick_repo
       - IN: baseami_prep
