Add reports_tag_push as a dependency

--- a/shippable.yml
+++ b/shippable.yml
@@ -159,6 +159,7 @@ jobs:
       - IN: dry_dh_x86_64_Ubuntu_tag_push
       - IN: genexec_tag_push
       - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -237,6 +238,7 @@ jobs:
         switch: off
       - IN: genexec_tag_push
       - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -261,6 +263,7 @@ jobs:
         switch: off
       - IN: genexec_tag_push
       - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -285,6 +288,7 @@ jobs:
         switch: off
       - IN: genexec_tag_push
       - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -309,6 +313,7 @@ jobs:
         switch: off
       - IN: genexec_tag_push
       - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -333,6 +338,7 @@ jobs:
         switch: off
       - IN: genexec_tag_push
       - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -357,6 +363,7 @@ jobs:
         switch: off
       - IN: genexec_tag_push
       - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -381,6 +388,7 @@ jobs:
         switch: off
       - IN: genexec_tag_push
       - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -405,6 +413,7 @@ jobs:
         switch: off
       - IN: genexec_tag_push
       - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -429,6 +438,7 @@ jobs:
         switch: off
       - IN: genexec_tag_push
       - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -453,6 +463,7 @@ jobs:
         switch: off
       - IN: genexec_tag_push
       - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
