--- a/shippable.yml
+++ b/shippable.yml
@@ -38,6 +38,17 @@ resources:
         REGION: "us-east-1"
         SHIPPABLE_NODE_INIT_SCRIPT: "x86_64__Ubuntu__14.04__Docker__17.06.sh"
 
+  - name: u16baseami_params
+    type: params
+    version:
+      params:
+        SOURCE_AMI: "ami-66506c1c"
+        VPC_ID: "vpc-266f3241"
+        SUBNET_ID: "subnet-6df12f24"
+        SECURITY_GROUP_ID: "sg-f634518c"
+        REGION: "us-east-1"
+        SHIPPABLE_NODE_INIT_SCRIPT: "x86_64__Ubuntu__16.04__Docker__17.06.sh"
+
   - name: admiralami_params
     type: params
     version:
@@ -116,6 +127,49 @@ jobs:
     on_failure:
       - script: cat IN/prepami_repo/gitRepo/base/output.txt #TODO change to standard syntax
 
+  - name: u16baseami_prep
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: prepami_repo
+        switch: off
+      - IN: ami_bits_access_cli
+        switch: off
+      - IN: u16baseami_params
+        switch: off
+      - IN: u16cppall_img
+      - IN: u16phpall_img
+      - IN: u16ruball_img
+      - IN: u16scaall_img
+      - IN: u16javall_img
+      - IN: u16golall_img
+      - IN: u16cloall_img
+      - IN: u16pytall_img
+      - IN: u16nodall_img
+      - IN: u14nodall_img
+      - IN: u14pytall_img
+      - IN: u14cloall_img
+      - IN: u14golall_img
+      - IN: u14javall_img
+      - IN: u14scaall_img
+      - IN: u14ruball_img
+      - IN: u14phpall_img
+      - IN: u14cppall_img
+      - IN: node_repo
+      - IN: cexec_repo
+      - IN: reqProc_x86_64_Ubuntu_16_04_prep
+      - IN: ami_reqKick_repo
+      - TASK:
+          script:
+            - pushd $(shipctl get_resource_state "prepami_repo")
+            - cd u16Base
+            - ./basePack.sh u16baseami_prep ami_bits_access_cli
+            - popd
+    on_failure:
+      - script: cat IN/prepami_repo/gitRepo/u16Base/output.txt #TODO change to standard syntax
+
+
   - name: baseami_patch
     type: runSh
     triggerMode: parallel
@@ -141,6 +195,31 @@ jobs:
     on_failure:
       - script: cat IN/prepami_repo/gitRepo/basePatch/output.txt #TODO change to standard syntax
 
+  - name: u16baseami_patch
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: prepami_repo
+        switch: off
+      - IN: ami_bits_access_cli
+        switch: off
+      - IN: u16baseami_params
+        switch: off
+      - IN: cexec_repo
+      - IN: node_repo
+      - IN: reqProc_x86_64_Ubuntu_16_04_prep
+      - IN: ami_reqKick_repo
+      - IN: u16baseami_prep
+      - TASK:
+          script:
+            - pushd $(shipctl get_resource_state "prepami_repo")
+            - cd u16BasePatch
+            - ./basePatchPack.sh u16baseami_patch ami_bits_access_cli u16baseami_prep
+            - popd
+    on_failure:
+      - script: cat IN/prepami_repo/gitRepo/u16BasePatch/output.txt #TODO change to standard syntax
+
   - name: finalami_prep
     type: runSh
     triggerMode: parallel
@@ -148,13 +227,13 @@ jobs:
     steps:
       - IN: prepami_repo
         switch: off
-      - IN: baseami_patch
+      - IN: u16baseami_patch
         switch: off
       - IN: prod_release
         switch: off
-      - IN: baseami_params
+      - IN: u16baseami_params
         switch: off
-      - IN: ami_bits_access
+      - IN: ami_bits_access_cli
         switch: off
       - IN: dry_dh_x86_64_Ubuntu_tag_push
       - IN: genexec_tag_push
@@ -163,8 +242,8 @@ jobs:
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
-            - cd exec
-            - ./execPack.sh finalami_prep prod_release baseami_patch ami_bits_access
+            - cd u16Exec
+            - ./execPack.sh finalami_prep prod_release u16baseami_patch ami_bits_access_cli
             - popd
     on_failure:
       - script: cat /build/IN/prepami_repo/gitRepo/exec/output.txt
